@@ -55,6 +55,7 @@ v13.0.00
 		Departments: added course long name to header of Class page
 		Departments: fixed errant translation preventing Class page details from showing in some languages (e.g. Spanish, French)
 		Departments: included participants in Class page, rather than as a subpage.
+		Finance: removed thousand separator from invoice bulk export
 		Library: reduced memory usage of Library browse page
 		Markbook: added settings to enable/disable Effort and Rubrics
 		Markbook: fixed bug preventing Learning Area rubric selection when course is associated with multiple year groups
